kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: LoadBalancer
  selector:
    app: catalog
  ports:
    - port: 3030
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - port: 3030
      targetPort: 3000
